--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 ThomasV - Creator and maintainer.
 Animazing / Tachikoma - Styled the new GUI. Mac version.
+Praise - Bugfixes
 Azelphur - GUI stuff.
 Coblee - Alternate coin support and py2app support.
 Deafboy - Ubuntu packages.
